[gd_scene load_steps=12 format=3 uid="uid://brrm84npst7bp"]

[ext_resource type="Texture2D" uid="uid://droeln3k0ndn" path="res://assets/station.png" id="1_a2g1o"]
[ext_resource type="Script" uid="uid://l7xovvvv4rjd" path="res://CookingSystem/appliances.gd" id="1_a8k81"]
[ext_resource type="FontFile" uid="uid://j1ikdqqghm6c" path="res://assets/m3x6.ttf" id="3_dmv7j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmv7j"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5ags"]
bg_color = Color(0.083492674, 0.1709615, 0.99999994, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ra12"]
bg_color = Color(0.083492674, 0.1709615, 0.99999994, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7gxx"]
bg_color = Color(0.4169775, 0.28263867, 0.17518583, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8k81"]
size = Vector2(92, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2g1o"]
size = Vector2(119, 118)

[sub_resource type="Curve" id="Curve_dmv7j"]
_limits = [0.0, 1.0058082, 0.0, 1.0]
_data = [Vector2(0.04522613, 0.516547), 0.0, 0.0, 0, 0, Vector2(0.9874371, 1.0058082), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_a5ags"]
colors = PackedColorArray(0.583047, 0.583047, 0.5830469, 1, 1, 1, 1, 1)

[node name="Appliance" type="StaticBody2D"]
script = ExtResource("1_a8k81")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_a2g1o")

[node name="Control" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ApplianceLabel" type="Label" parent="Sprite2D/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -51.0
offset_right = 50.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_dmv7j")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Sprite2D/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -3.7037048
offset_bottom = 30.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_dmv7j")
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_dmv7j")
theme_override_styles/fill = SubResource("StyleBoxFlat_a5ags")
max_value = 1.0

[node name="SpoilProgressBar" type="ProgressBar" parent="Sprite2D/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -3.7037048
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_dmv7j")
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_1ra12")
theme_override_styles/fill = SubResource("StyleBoxFlat_t7gxx")
max_value = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a8k81")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_a2g1o")

[node name="SelectedFood" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="SmokeParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 3
lifetime = 1.2
randomness = 0.5
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -100)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 10.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_dmv7j")
color = Color(0.48570347, 0.48570353, 0.48570347, 1)
color_ramp = SubResource("Gradient_a5ags")
hue_variation_min = 0.1
hue_variation_max = 1.0
